added jwt implementation